...
            android:gravity="center"
            android:ems="10"
            android:textStyle="bold"
            android:text="CodeLingo" />

        <EditText
            android:id="@+id/un_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#37963FB5"
            android:hint="@string/username"
...
        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:onClick="btnLoginOnClick"
            android:text="@string/sign_in"
            android:textSize="30dp" />

    </LinearLayout>

</RelativeLayout>
