<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cont_CourseOverview">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="1280dp"
            android:layout_height="800dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-1dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/login_background" />

        <ImageView
            android:layout_width="398dp"
            android:layout_height="353dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="124dp"
            android:contentDescription="untitled_design__8__1"
            android:src="@drawable/course_overview_intro" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="55dp"
            android:contentDescription="outer_box"
            android:src="@drawable/outer_box" />

        <TextView
            android:id="@+id/placeholder_course"
            android:layout_width="521dp"
            android:layout_height="56dp"
            android:layout_marginLeft="107dp"
            android:layout_marginTop="0dp"
            android:text="@string/placeholder_course_string"
            android:textColor="@color/_bg__surface_pro_8___1_ek2_color"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="477dp"
            android:layout_height="477dp"
            android:layout_marginStart="326dp"
            android:layout_marginTop="112dp"
            android:contentDescription="line_1"
            android:src="@drawable/line" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="692.75dp"
            android:layout_marginTop="426.89dp" />

        <TextView
            android:layout_width="375dp"
            android:layout_height="66dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginLeft="139dp"
            android:layout_marginTop="493dp"
            android:gravity="center"
            android:text="Coding is fun!"
            android:textColor="@color/loren_ipsum_color"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/progress_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="259dp"
            android:layout_toEndOf="@+id/placeholder_course"
            android:text="0%"
            android:textColor="#FFFF"
            android:textSize="40sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="622dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_percentage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="82dp"
            android:layout_marginBottom="-6dp"
            android:visibility="visible"
            app:cardBackgroundColor="#00000000"
            tools:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chapterList"
                android:name="CodeLinguists.codelingo.ui.ChapterFragment"
                android:layout_width="match_parent"
                android:layout_height="515dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/fragment_item" />
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</FrameLayout>