<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Codelingo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chapter_status">Chapter Status</string>
    <string name="codelingo_string">CodeLingo</string>
    <string name="placeholder_course_string">Placeholder Course</string>
    <string name="ex_1_string">Ex 1</string>
    <string name="ex_4_string">Ex 4</string>
    <string name="ex_3_string">Ex 3</string>
    <string name="ex_2_string">Ex 2</string>
    <string name="optionA">Option A</string>
    <string name="optionB">Option B</string>
    <string name="optionC">Option C</string>
    <string name="optionD">Option D</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="SlideTitlePlaceholder">Slide #%1$d</string>
    <string name="placeholder">placeholder</string>
    <string name="check_answer">Check Answer</string>
    <string name="done">Done!</string>
    <string name="next">Next</string>
    <string name="wrong_answer_title">Wrong Answer</string>
    <string name="correct_answer_title">Correct!</string>
    <string name="please_complete_the_previous_chapters">please complete the previous chapters</string>
    <string name="select_a_course">Select a course</string>
    <string name="welcome_name">Welcome, %s</string>
    <string name="stay_signed_in">Stay Signed in?</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
</resources>