...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/answer_input"
        android:layout_width="1094dp"
        android:layout_height="87dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/short_answer_box_outline"
        android:hint="Answer"
...
